--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +7,7 @@
 
 .app {
   background-color: #fafafa;
+  font-family: "Nunito", sans-serif;
 }
 
 .app__header {
@@ -18,8 +21,9 @@
 
 .app__headerImage {
   object-fit: contain;
-  width: 100px;
+  width: 70px;
   padding: 0;
+  margin: 0 40px;
 }
 
 .app__signup {
@@ -32,8 +36,8 @@
 }
 
 .default-text {
-  font-size: 15px;
-  color: red;
+  font-size: 20px;
+  color: black;
   text-align: center;
   padding: 15px;
   border-bottom: 2px solid lightgray;
