--- a/src/ImageUpload.css
+++ b/src/ImageUpload.css
@@ -1,11 +1,13 @@
 .imageUpload {
   display: flex;
   flex-direction: column;
-  width: 60%;
+  width: 30%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
   margin-bottom: 10px;
+  /* padding: 20px; */
+  /* border: 2px solid lightgray; */
   /* background-color: white; */
   /* border-top: px solid lightgrey; */
 }
